--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -5,10 +5,9 @@
 }
 
 .profile__avatar {
-  height: 190px;
-  width: 190px;
   margin-right: 20px;
   border-radius: 8px;
+  object-fit: cover;
 }
 
 .profile__column {
