--- a/blocks/cards.css
+++ b/blocks/cards.css
@@ -1,5 +1,5 @@
 .cards {
-  padding: 20px 0 36px 0;
+  padding: 20px 0 36px;
   border-bottom: 1px rgba(33, 33, 33, 0.4) solid;
 }
 
@@ -14,6 +14,9 @@
 }
 
 @media screen and (max-width: 627px) {
+  .cards {
+    padding: 20px 0 22px;
+  }
   .cards__list {
     grid-template-columns: repeat(auto-fit, 288px);
     gap: 20px;
