--- a/blocks/card.css
+++ b/blocks/card.css
@@ -1,9 +1,14 @@
+.card {
+  position: relative;
+}
+
 .card__image {
   height: 413px;
   width: 100%;
   object-fit: cover;
   display: block;
   border-radius: 8px;
+  z-index: 0;
 }
 
 .card__footer {
@@ -26,17 +31,43 @@
 }
 
 .card__like-button {
-  background-image: url(../images/heart.svg);
+  background: transparent url(../images/like-icon-state=hover.png) center
+    no-repeat;
   padding: 0;
   width: 23px;
   height: 20px;
   border: none;
-  background-color: transparent;
   opacity: 40%;
   cursor: pointer;
 }
 
 .card__like-button:hover {
+  opacity: 100%;
+}
+
+.card__like-button_liked {
+  background-image: url("../images/like-icon-state=liked.svg");
+  opacity: 100%;
+}
+
+.card__like-button_liked:hover {
+  background-image: url("../images/like-icon-state=liked+hover.svg");
+}
+
+.card__delete-button {
+  position: absolute;
+  background: transparent url(../images/delete-button-state=hover.png) center
+    no-repeat;
+  width: 32px;
+  height: 32px;
+  border: none;
+  top: 10px;
+  right: 10px;
+  opacity: 60%;
+  cursor: pointer;
+}
+
+.card__delete-button:hover {
   opacity: 100%;
 }
 
