--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -11,10 +11,14 @@
   justify-content: center;
   padding: 0 20px;
   visibility: hidden;
+  opacity: 0;
+  transition: visibility 0s linear 0.5s, opacity 0.5s linear;
 }
 
 .modal_opened {
   visibility: visible;
+  opacity: 1;
+  transition-delay: 0s;
 }
 
 .modal__container {
@@ -24,10 +28,38 @@
   box-sizing: border-box;
   padding: 32px 50px;
   position: relative;
+  border-radius: 8px;
+}
+
+.modal__container_type_preview {
+  padding: 0;
+  background-color: transparent;
+  width: unset;
+}
+
+.modal__image {
+  width: 100%;
+  object-fit: contain;
+  max-width: 80vw;
+  max-height: 80vh;
+  border-radius: 8px;
+}
+
+.modal__caption {
+  margin: 0;
+  padding: 4px 8px;
+  background-color: #212121;
+  color: #fff;
+  width: fit-content;
+  border-radius: 8px;
+  font-family: Poppins, Arial, Helvetica, sans-serif;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
 }
 
 .modal__close-button {
-  background-image: url(../images/Close\ Icon.png);
+  background-image: url("../images/Close\ Icon.png");
   background-size: contain;
   background-color: #ffffff;
   position: absolute;
@@ -39,7 +71,14 @@
 }
 
 .modal__close-button:hover {
-  background-image: url(../images/Property\ 1=Variant2.png);
+  background-image: url("../images/Property\ 1=Variant2.png");
+}
+
+.modal__close-button_type_preview {
+  background-image: url("../images/Close-Icon-Light.png");
+  top: 0px;
+  right: -52.5px;
+  opacity: 1;
 }
 
 .modal__title {
@@ -114,5 +153,21 @@
 
   .modal__submit-button {
     width: 100%;
+  }
+
+  .modal__close-button_type_preview {
+    position: absolute;
+    right: 0px;
+    top: -50px;
+  }
+
+  .modal__image {
+    max-height: none;
+    max-width: none;
+  }
+
+  .modal__caption {
+    font-size: 16px;
+    line-height: 1.2;
   }
 }
