--- a/src/blocks/modal.css
+++ b/src/blocks/modal.css
@@ -37,6 +37,11 @@
   width: unset;
 }
 
+.modal__container_type_delete {
+  max-width: 630px;
+  margin: 0 auto;
+}
+
 .modal__image {
   width: 100%;
   object-fit: contain;
@@ -82,12 +87,31 @@
   opacity: 1;
 }
 
+.modal__close-button_type_delete {
+  background-image: url("../images/close-icon-preview.svg");
+  top: 0px;
+  right: -52.5px;
+  opacity: 1;
+}
+
 .modal__title {
   margin: 0 0 32px;
   font-weight: 500;
   font-size: 32px;
   line-height: 1;
   color: #212121;
+}
+
+.modal__title_type_delete {
+  font-size: 24px;
+  text-align: center;
+  font-family: Poppins, Arial, Helvetica, sans-serif;
+}
+
+.modal__form_type_delete {
+  display: flex;
+  gap: 20px;
+  justify-content: center;
 }
 
 .modal__label {
@@ -143,6 +167,32 @@
   opacity: 50%;
 }
 
+.modal__submit-button_type_delete {
+  background-color: #ff6565;
+  color: #212121;
+}
+
+.modal__submit-button_type_delete:hover {
+  background-color: #ff3333;
+}
+
+.modal__cancel-button {
+  width: 156px;
+  padding: 18px 0;
+  border-radius: 8px;
+  background-color: #ffffff;
+  color: #212121;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1;
+  cursor: pointer;
+}
+
+.modal__cancel-button:hover {
+  background-color: #212121;
+  color: #fff;
+}
+
 @media screen and (max-width: 627px) {
   .modal {
     padding: 0 10px;
@@ -166,6 +216,12 @@
     margin: 10px 0 34px;
   }
 
+  .modal__form_type_delete {
+    flex-direction: column;
+    max-width: 156px;
+    margin: 0 auto;
+  }
+
   .modal__label {
     margin-bottom: 24px;
   }
@@ -184,6 +240,11 @@
     top: -40px;
   }
 
+  .modal__close-button_type_delete {
+    position: absolute;
+    right: 0px;
+    top: -40px;
+  }
   .modal__image {
     max-height: none;
     max-width: none;
