--- a/src/blocks/modal.css
+++ b/src/blocks/modal.css
@@ -13,6 +13,7 @@
   visibility: hidden;
   opacity: 0;
   transition: visibility 0s linear 0.5s, opacity 0.5s linear;
+  font-family: Poppins, Arial, Helvetica, sans-serif;
 }
 
 .modal_opened {
@@ -88,7 +89,7 @@
 }
 
 .modal__close-button_type_delete {
-  background-image: url("../images/close-icon-preview.svg");
+  background-image: url("../images/close-icon-delete1.png");
   top: 0px;
   right: -52.5px;
   opacity: 1;
